<resources>
    <string name="app_name">PaseaAsturias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="short_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <!-- Menu -->
    <string name="menu_activity">Actividades</string>
    <string name="menu_selection">Turismo</string>
    <string name="menu_map">Mapa</string>

    <!-- Nombre de Categorias de Actividades   -->
    <string name="activity_name_water">Actividades de Agua</string>
    <string name="activity_name_mountain">Actividades de Montaña</string>
    <string name="activity_name_adventure">Actividades de Aventura</string>
    <string name="activity_name_sports">Actividades de Deportes</string>
    <string name="activity_name_nature">Actividades de Naturaleza</string>
    <string name="activity_name_misc">Actividades Misceláneas</string>

    <!-- Selection -->
    <string name="fragment_selection_activity">Actividades:</string>
    <string name="fragment_selection_tariffs">Tarifas:</string>
    <string name="fragment_selection_info">Mas Información:</string>

</resources>